--- a/resources/index.html
+++ b/resources/index.html
@@ -134,19 +134,31 @@
   transition: all .02s linear;
   width: 80px;
 }
+
+.label {
+    color: #fff;
+    font-family: sans-serif;
+    font-size:15px;
+    width:60px;
+    text-align:center;
+}
   </style>
 </head>
 
-<body bgcolor="green">
+<body bgcolor="#333">
 <div class="joystick" id="joystick"></div>
+
 <div class="button" style="top:30px;left:5px;" id="button1"></div>
-<div style="top:76px;left:274px;position:absolute;" id="b1label"></div>
+<div class="label" style="top:66px;left:264px;position:absolute;" id="b1label"></div>
+
 <div class="button" id="button2"></div>
-<div style="top:47px;left:335px;position:absolute;" id="b2label"></div>
+<div class="label" style="top:37px;left:325px;position:absolute;" id="b2label"></div>
+
 <div class="button" style="top:5px;" id="button3"></div>
-<div style="top:52px;left:400px;position:absolute;" id="b3label"></div>
+<div class="label" style="top:42px;left:390px;position:absolute;" id="b3label"></div>
+
 <div class="button" style="left:-200px;top:100px;" id="button4"></div>
-<div style="top:231px;left:268px;position:absolute;" id="b4label"></div>
+<div class="label" style="top:223px;left:255px;position:absolute;" id="b4label"></div>
 
 <script>
   const uri = 'ws://' + location.host + '/buttons';
