For devcontainer over HTTPS, wss:// is needed

--- a/resources/index.html
+++ b/resources/index.html
@@ -161,7 +161,7 @@
 <div class="label" style="top:223px;left:255px;position:absolute;" id="b4label"></div>
 
 <script>
-  const uri = 'ws://' + location.host + '/buttons';
+  const uri = 'wss://' + location.host + '/buttons';
   const ws = new WebSocket(uri);
   var joystickPosition = {};
 
